test/Harper/Tests/Good/issue028_nestedTypes.har
f :: (a, (b, c, (d, e, f), g), a, (b, b, c)) -> (a, (b, c, (d, e, f), g), a, (b, b, c));
f x = g x;

g :: (a, (b, c, d, e), a, (b, b, f)) -> (a, (b, c, d, e), a, (b, b, f));
g x = h x;

h :: (a, b, c, d) -> (a, b, c, d);
h x = x;

main :: ();
main = ();