test/Harper/Tests/Bad/issue013_typVars.har
x :: a -> b;

f :: a ;
f = {
  (g :: c -> d)= x ;
  (h :: e -> f)= x ;
  match g h {
    (i :: a) => return i ;
    }
  } ;

main :: Bool;
main = f;